<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".BetweenDatesFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <DatePicker
                android:id="@+id/date_picker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_gravity="center" />
            <View
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>


            <DatePicker
                android:id="@+id/date_picker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_gravity="center" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/time_passed_until"
                />

            <View
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/years_months_days1"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/years_month_days_string"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TableRow
                    android:layout_marginTop="10dp">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlue"
                        android:text="@string/months"
                        android:layout_marginEnd="20dp"
                        />

                    <TextView
                        android:id="@+id/months_value1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_zero"
                        android:textSize="20sp"
                        android:textColor="@color/colorRed"
                        />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlue"
                        android:text="@string/weeks"
                        android:layout_marginEnd="20dp"
                        />

                    <TextView
                        android:id="@+id/weeks_value1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_zero"
                        android:textSize="20sp"
                        android:textColor="@color/colorRed"
                        />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlue"
                        android:text="@string/days"
                        android:layout_marginEnd="20dp"
                        />

                    <TextView
                        android:id="@+id/days_value1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_zero"
                        android:textSize="20sp"
                        android:textColor="@color/colorRed"
                        />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlue"
                        android:text="@string/hours"
                        android:layout_marginEnd="20dp"
                        />

                    <TextView
                        android:id="@+id/hours_value1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_zero"
                        android:textSize="20sp"
                        android:textColor="@color/colorRed"
                        />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlue"
                        android:text="@string/minutes"
                        android:layout_marginEnd="20dp"
                        />

                    <TextView
                        android:id="@+id/minutes_value1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_zero"
                        android:textSize="20sp"
                        android:textColor="@color/colorRed"
                        />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>